# jacobs-json-doc

./: .gitpod.yml  AGENTS.md  LICENSE  README.md  Taskfile.yml  pyproject.toml  setup.py
.circleci/: config.yml
examples/: author.yaml  example.yaml  load_yaml.py
jacobsjsondoc/: __init__.py  _version.py  document.py  fetcher.py  loader.py  options.py  parser.py  reference.py  resolver.py  test_document.py  util.py
tests/: context.py  minLength.json  test_dialects.py  test_document.py  test_imports.py  test_parse.py  test_quick_parse.py  test_reference.py  test_types.py  test_util.py
