[project]
name = "jacobs-json-doc"
version = "0.18.0"
description = "A JSON/YAML loader"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Jacob Brunson", email = "pypi@jacobbrunson.com" },
]
keywords = ["conversion"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ruamel.yaml>=0.19.1",
]

[dependency-groups]
dev = [
    "black",
    "mypy>=2.3.0",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jacobsjsondoc"]

[project.urls]
Homepage = "https://github.com/pearmaster/jacobs-json-doc"
Repository = "https://github.com/pearmaster/jacobs-json-doc"
